# fidelity-trader-api

./: .dockerignore  .gitignore  404.html  CLAUDE.md  LICENSE  Makefile  README.md  index.html  mkdocs.yml  pyproject.toml  sitemap.xml
.claude/agents/: api-surface-extractor.md  assembly-deep-diver.md  capture-analyst.md  config-miner.md  decomp-orchestrator.md  decompiler-setup.md  docker-builder.md  implementer.md  model-extractor.md  protocol-decoder.md  reviewer.md  route-builder.md  sdk-implementer.md  sdk-reconciler.md  service-reviewer.md  service-scaffolder.md  service-tester.md  state-flow-analyzer.md  streaming-builder.md
.github/: RELEASE_TEMPLATE.md
.github/workflows/: ci.yml  docs.yml  publish.yml
clients/go/: client.gen.go  go.mod
clients/typescript/src/: types.ts
data/: ftservice.db
docker/: .env.example  Dockerfile  docker-compose.yml
docs/: BACKLOG.md  DECISIONS.md  DECOMPILATION_REFERENCE.md  PRODUCT_VISION.md  SERVICE_PLAN.md
docs/captures/: 2026-03-30-websocket-streaming.md
docs/site/: index.md
docs/site/getting-started/: installation.md  quickstart.md  safety.md
docs/site/guide/: cli.md  client-generation.md  credentials.md  errors.md  sdk.md  service.md
docs/site/project/: architecture.md  development.md  roadmap.md
docs/superpowers/plans/: 2026-03-30-fidelity-trader-sdk.md
examples/: full_walkthrough.py  live_streaming.py  live_test.py  login.py  mdds_experiment.py  test_all_data_types.py
getting-started/installation/: index.html
getting-started/quickstart/: index.html
getting-started/safety/: index.html
guide/cli/: index.html
guide/credentials/: index.html
guide/errors/: index.html
guide/sdk/: index.html
guide/service/: index.html
project/architecture/: index.html
project/development/: index.html
project/roadmap/: index.html
scripts/: export_openapi.py
search/: search_index.json
service/: __init__.py  __main__.py  app.py  config.py  dependencies.py
service/auth/: api_key.py  middleware.py
service/models/: requests.py  responses.py  schemas.py
service/routes/: accounts.py  auth.py  market_data.py  orders.py  preferences.py  reference.py  research.py  service.py  streaming.py  watchlists.py
service/session/: keepalive.py  manager.py  store.py
service/streaming/: manager.py  sse.py  ws.py
src/fidelity_trader/: __init__.py  _http.py  async_client.py  client.py  credentials.py  exceptions.py  retry.py
src/fidelity_trader/accounts/: __init__.py  accounts.py
src/fidelity_trader/alerts/: __init__.py  price_triggers.py  subscription.py
src/fidelity_trader/auth/: __init__.py  auto_refresh.py  security_context.py  session.py  session_keepalive.py
src/fidelity_trader/cli/: __init__.py  _app.py  _auth.py  _config.py  _errors.py  _market_data.py  _options.py  _orders.py  _output.py  _portfolio.py  _research.py  (+2 more)
tests/: conftest.py  test_account_discovery.py  test_accounts.py  test_alerts.py  test_analytics.py  test_async_client.py  test_auth.py  test_auto_refresh.py  test_available_markets.py  test_balances.py  test_cancel_orders.py  test_cancel_replace.py  test_chart.py  test_cli.py  test_cli_market.py  test_cli_orders.py  test_client.py  test_closed_positions.py  test_conditional_orders.py  test_csrf.py  test_dry_run.py  test_equity_orders.py  test_fastquote.py  test_holiday_calendar.py  test_http.py  test_loaned_securities.py  test_mdds.py  test_models.py  test_openapi_schema.py  test_option_orders.py  test_option_summary.py  test_orders.py  test_positions.py  test_preferences.py  test_price_triggers.py  test_research.py  test_retry.py  test_screener.py  test_search.py  test_security_context.py  (+11 more)
(+69 files in other folders)
