[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "fidelity-trader-sdk"
version = "0.1.0"
description = "Unofficial Python SDK for Fidelity Trader+ API"
readme = "README.md"
license = "MIT"
requires-python = ">=3.10"
authors = [
    { name = "brownjosiah" },
]
dependencies = [
    "httpx>=0.27",
    "pydantic>=2.0",
]

[project.optional-dependencies]
aws = [
    "boto3>=1.34",
]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.24",
    "respx>=0.22",
    "boto3>=1.34",
]

[tool.hatch.build.targets.wheel]
packages = ["src/fidelity_trader"]
