[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "fidelity-trader-sdk"
version = "0.1.0"
description = "Unofficial Python SDK for Fidelity Trader+ API"
readme = "README.md"
license = "MIT"
requires-python = ">=3.10"
authors = [
    { name = "brownjosiah" },
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Office/Business :: Financial :: Investment",
]
dependencies = [
    "httpx>=0.27",
    "pydantic>=2.0",
]

[project.optional-dependencies]
aws = [
    "boto3>=1.34",
]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.24",
    "respx>=0.22",
    "boto3>=1.34",
]

[project.urls]
Homepage = "https://github.com/brownjosiah/fidelity-trader-sdk"
Repository = "https://github.com/brownjosiah/fidelity-trader-sdk"
Issues = "https://github.com/brownjosiah/fidelity-trader-sdk/issues"
Documentation = "https://github.com/brownjosiah/fidelity-trader-sdk#readme"

[tool.hatch.build.targets.wheel]
packages = ["src/fidelity_trader"]

[tool.ruff]
line-length = 120
target-version = "py310"

[tool.pytest.ini_options]
testpaths = ["tests"]
