[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "fidelity-trader-api"
version = "0.1.0"
description = "Unofficial Python SDK for Fidelity Trader+ API — Your Fidelity account, your API."
readme = "README.md"
license = "Apache-2.0"
requires-python = ">=3.10"
authors = [
    { name = "brownjosiah" },
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Office/Business :: Financial :: Investment",
]
dependencies = [
    "httpx>=0.27",
    "pydantic>=2.0",
]

[project.optional-dependencies]
aws = [
    "boto3>=1.34",
]
cli = [
    "typer>=0.12",
    "rich>=13.0",
]
service = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.30",
    "cryptography>=43.0",
    "aiosqlite>=0.20",
    "pydantic-settings>=2.0",
]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.24",
    "respx>=0.22",
    "boto3>=1.34",
]
docs = [
    "mkdocs-material>=9.5",
]

[project.scripts]
ft = "fidelity_trader.cli:app"

[project.urls]
Homepage = "https://github.com/brownjosiah/fidelity-trader-api"
Repository = "https://github.com/brownjosiah/fidelity-trader-api"
Issues = "https://github.com/brownjosiah/fidelity-trader-api/issues"
Documentation = "https://brownjosiah.github.io/fidelity-trader-api/"

[tool.hatch.build.targets.wheel]
packages = ["src/fidelity_trader"]

[tool.ruff]
line-length = 120
target-version = "py310"

[tool.pytest.ini_options]
testpaths = ["tests"]
